<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivNoConnectInternet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/no_connect_to_internet"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/padding"
        android:layout_margin="@dimen/margin"
        android:contentDescription="@string/no_connect_to_internet" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvConnecting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_no_internet"
        android:textSize="@dimen/tv"
        android:padding="@dimen/padding"
        android:layout_margin="@dimen/margin"
        android:layout_below="@id/ivNoConnectInternet"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/tvConnecting">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_wifi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/btn"
            android:text="@string/wi_fi"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@drawable/btn_background"
            android:padding="@dimen/padding"
            android:layout_margin="@dimen/margin"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/btn"
            android:text="@string/data"
            android:textColor="@color/white"
            android:background="@drawable/btn_background"
            android:padding="@dimen/padding"
            android:layout_margin="@dimen/margin"/>

    </LinearLayout>

</RelativeLayout>